updated the graphics - added links to them - fixed on mobile

--- a/sillyVyperDay/v3.css
+++ b/sillyVyperDay/v3.css
@@ -77,7 +77,7 @@ body {
         }
 
 		.card {
-    width: 500px;
+    max-width: 500px;
 }
 
 a {
@@ -191,4 +191,12 @@ a {
     bottom: 0;
     left: 0;
     mix-blend-mode: multiply;
+}
+
+
+.sponsor {
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
 }
